# layers

./: .gitignore  README.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/api/endpoints/: analytics.py  openai.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: analytics.py  analyze.py  events.py  funnels.py  users.py
backend/app/core/: config.py
backend/app/data_access/: __init__.py  base.py  interfaces.py  mongodb.py
backend/app/models/: event.py  user.py
backend/app/services/: openai_service.py
backend/app/services/prompts/: base.py  flow_analysis.py  funnel.py  funnel_analysis.py  segment.py  user_behavior.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/layout/: ServerStatus.css  ServerStatus.tsx  SideNav.css  SideNav.tsx
frontend/src/components/modals/: PromptModal.css  PromptModal.tsx  ResultModal.css  ResultModal.tsx
frontend/src/components/sidebar/: AnalysisSidebar.css  AnalysisSidebar.tsx
frontend/src/components/user/: UserDetails.css  UserDetails.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/pages/: Events.css  Home.css  Home.tsx  Settings.css  Settings.tsx
frontend/src/pages/modals/: CreateFunnel.css  CreateFunnel.tsx
frontend/src/pages/settings/: Settings.css  Settings.tsx
frontend/src/pages/sidebar/: Events.tsx  Home.tsx  UserSearch.css  UserSearch.tsx
frontend/src/services/: analyticsService.ts  api.ts  userService.ts
frontend/src/types/: user.ts
(+11 files in other folders)
