[tool.poetry]
name = "layers-backend"
version = "0.1.0"
description = "Backend for Layers project"
authors = ["Your Name"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"
motor = "^3.3.2"
openai = "^1.12.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn:main"
